# My-First-Bot

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  DEPLOY.md  Dockerfile  Dockerfile.data-hub  docker-compose.yml
bot/: cleanup.py  client.py  config.py  db.py  discovery.py  exits.py  main.py  models.py  orders.py  signals.py  startup.py
crates/api/: Cargo.toml
crates/api/src/: auth.rs  backtest.rs  db.rs  lib.rs  routes.rs  state.rs
crates/bot/: Cargo.toml
crates/bot/src/: bilateral.rs  crypto_strategies.rs  crypto_strategies_v2.rs  data_bridge.rs  main.rs  mm_pipeline.rs  pipeline.rs  strategies.rs  timeframe_intel.rs
crates/bot/src/quant/: garch.rs  hurst.rs  jump.rs  mod.rs  student_t.rs
crates/data/: Cargo.toml
crates/data-hub/: Cargo.toml
crates/data-hub/src/: api.rs  candle_store.rs  db.rs  intel.rs  main.rs  round_tracker.rs  types.rs
crates/data/src/: candle_builder.rs  client.rs  hub.rs  lib.rs  state.rs  traits.rs  watchdog.rs
crates/data/src/adapters/: binance_futures_rest.rs  binance_futures_ws.rs  binance_spot_ws.rs  coinbase_rest.rs  deribit_ws.rs  mod.rs  polymarket_clob_ws.rs
crates/executor/: Cargo.toml
crates/executor/src/: clob.rs  cost.rs  executor.rs  lib.rs  live.rs  order.rs  paper.rs  signer.rs
crates/risk/: Cargo.toml
crates/risk/src/: build_chain.rs  chain.rs  checks.rs  gate.rs  gates.rs  kelly.rs  lib.rs  types.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: clob.rs  crypto.rs  filter.rs  lib.rs  price_feed.rs  types.rs
python/: Dockerfile  requirements.txt
python/analytics/: report.py
python/compounder/: analyzer.py
python/predictor/: model.py  requirements.txt
python/research/: fleet_analysis.py  phase0_binance.py  phase0_polymarket.py  requirements.txt  scraper.py
python/strategy_service/: ensemble.py  main.py  models.py
python/strategy_service/strategies/: __init__.py  base.py  brownian_bridge.py  candle_trend.py  clob_microstructure.py  cross_asset_momentum.py  factor_model.py  fair_value_dislocation.py  futures_positioning.py  garch_t.py  hierarchical_cascade.py  imm_regime.py  lmsr_filter.py  momentum_garch.py  monte_carlo.py  options_flow.py  registry.py  spread_dynamics.py  stoch_vol.py  token_flow.py  vol_regime.py  volume_breakout.py
