[package]
name = "polybot-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
polybot-scanner = { path = "../scanner" }
polybot-risk = { path = "../risk" }
rusqlite = { workspace = true }
