[package]
name = "polybot"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "polybot"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
axum.workspace = true
polybot-api = { path = "../api" }
polybot-scanner = { path = "../scanner" }
polybot-risk = { path = "../risk" }
polybot-executor = { path = "../executor", features = ["live-signing"] }
polybot-data = { path = "../data" }
reqwest.workspace = true
