[package]
name = "polybot-data-hub"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "data-hub"
path = "src/main.rs"

[dependencies]
polybot-data = { path = "../data" }
polybot-scanner = { path = "../scanner" }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
