[package]
name = "polybot-data"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
polybot-scanner = { path = "../scanner" }
